--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.407.0",
