--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
