--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
