--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "theme_color": "#8936FF",
-  "background_color": "#2EC6FE",
+  "theme_color": "#fffff",
   "icons": [
     {
       "purpose": "maskable",
