--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.2",
     "js-cookie": "^3.0.5",
